--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/login.css" />
+  <link rel="stylesheet" href="./assets/login.css">>
   <script src="./script/login.js" defer></script>
 </head>
 
